// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home Should be render Pokecards 1`] = `
<RCTSafeAreaView
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
        "marginLeft": 32,
        "marginRight": 32,
        "position": "relative",
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#21386E",
          "fontSize": 42,
          "fontWeight": "bold",
          "marginBottom": 42,
          "marginTop": 42,
        },
      ]
    }
  >
    More than 1249 Pokemons for you choose your favorite
  </Text>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderColor": "#3663AD",
          "borderRadius": 42,
          "borderStyle": "solid",
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 85,
          "justifyContent": "space-between",
          "marginBottom": 42,
          "paddingBottom": 25,
          "paddingLeft": 30,
          "paddingRight": 30,
          "paddingTop": 25,
          "width": "100%",
        },
      ]
    }
  >
    <Image
      source={1}
      style={
        Array [
          Object {
            "height": 53,
            "width": 53,
          },
        ]
      }
      testID="searchIcon"
    />
    <TextInput
      accessibilityHint="Type here to search pokemons"
      onChange={[Function]}
      onPointerEnter={[Function]}
      style={
        Array [
          Object {
            "color": "#21386E",
            "fontSize": 30,
            "opacity": 0.5,
            "textAlign": "left",
            "width": 471,
          },
        ]
      }
      value=""
    />
    <View
      accessibilityHint="Press to search"
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <Image
        source={1}
        style={
          Array [
            Object {
              "height": 53,
              "width": 53,
            },
          ]
        }
      />
    </View>
  </View>
  <RCTScrollView
    data={
      Array [
        Object {
          "color": "red",
          "id": 1,
          "name": "teste1",
          "type": Array [
            "testeA",
            "testeB",
          ],
        },
        Object {
          "color": "blue",
          "id": 1,
          "name": "teste2",
          "type": Array [
            "testeC",
            "testeD",
          ],
        },
      ]
    }
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onEndReached={[Function]}
    onEndReachedThreshold={0.1}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    viewabilityConfigCallbackPairs={Array []}
  >
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            Array [
              Object {
                "flexDirection": "row",
              },
              Object {
                "justifyContent": "space-evenly",
                "width": 720,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {},
                Object {
                  "opacity": 0,
                },
              ]
            }
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#FB6C6C",
                  "borderRadius": 32,
                  "height": 405,
                  "justifyContent": "center",
                  "marginBottom": 25,
                  "marginTop": 25,
                  "opacity": 1,
                  "position": "relative",
                  "width": 300,
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "position": "absolute",
                      "top": -22,
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {},
                      Object {
                        "transform": Array [
                          Object {
                            "translateY": -37.5,
                          },
                        ],
                      },
                    ]
                  }
                >
                  <View
                    color="default"
                    isId={true}
                    style={
                      Array [
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "#FFCB05",
                          "borderRadius": 21,
                          "justifyContent": "center",
                          "paddingBottom": 2,
                          "paddingLeft": 21,
                          "paddingRight": 21,
                          "paddingTop": 2,
                        },
                      ]
                    }
                  >
                    <Text
                      color="default"
                      isId={true}
                      style={
                        Array [
                          Object {
                            "color": "#21386E",
                            "textTransform": "capitalize",
                          },
                        ]
                      }
                    >
                      # 001
                    </Text>
                  </View>
                </View>
              </View>
              <View
                color="red"
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#FEA1A1",
                      "borderRadius": 117,
                      "height": 233,
                      "justifyContent": "center",
                      "opacity": 1,
                      "width": 233,
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {},
                      Object {
                        "transform": Array [
                          Object {
                            "scale": 0.4,
                          },
                        ],
                      },
                    ]
                  }
                >
                  <Image
                    source={
                      Object {
                        "uri": "https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/1.png",
                      }
                    }
                    style={
                      Array [
                        Object {
                          "height": 199,
                          "width": 199,
                        },
                      ]
                    }
                  />
                </View>
              </View>
              <View
                style={
                  Array [
                    Object {},
                    Object {
                      "transform": Array [
                        Object {
                          "scale": 0.4,
                        },
                      ],
                    },
                  ]
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontSize": 38,
                        "fontWeight": "bold",
                        "opacity": 1,
                        "textTransform": "capitalize",
                      },
                    ]
                  }
                >
                  teste1
                </Text>
              </View>
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "space-evenly",
                      "marginTop": 15,
                      "width": "100%",
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {},
                      Object {
                        "transform": Array [
                          Object {
                            "scale": 0.4,
                          },
                        ],
                      },
                    ]
                  }
                >
                  <View
                    color="red"
                    isId={false}
                    style={
                      Array [
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "#EA6464",
                          "borderRadius": 21,
                          "justifyContent": "center",
                          "paddingBottom": 2,
                          "paddingLeft": 21,
                          "paddingRight": 21,
                          "paddingTop": 2,
                        },
                      ]
                    }
                  >
                    <Text
                      color="red"
                      isId={false}
                      style={
                        Array [
                          Object {
                            "color": "#FFF",
                            "textTransform": "capitalize",
                          },
                        ]
                      }
                    >
                      testeA
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    Array [
                      Object {},
                      Object {
                        "transform": Array [
                          Object {
                            "scale": 0.4,
                          },
                        ],
                      },
                    ]
                  }
                >
                  <View
                    color="red"
                    isId={false}
                    style={
                      Array [
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "#EA6464",
                          "borderRadius": 21,
                          "justifyContent": "center",
                          "paddingBottom": 2,
                          "paddingLeft": 21,
                          "paddingRight": 21,
                          "paddingTop": 2,
                        },
                      ]
                    }
                  >
                    <Text
                      color="red"
                      isId={false}
                      style={
                        Array [
                          Object {
                            "color": "#FFF",
                            "textTransform": "capitalize",
                          },
                        ]
                      }
                    >
                      testeB
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              Array [
                Object {},
                Object {
                  "opacity": 0,
                },
              ]
            }
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#77BDFE",
                  "borderRadius": 32,
                  "height": 405,
                  "justifyContent": "center",
                  "marginBottom": 25,
                  "marginTop": 25,
                  "opacity": 1,
                  "position": "relative",
                  "width": 300,
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "position": "absolute",
                      "top": -22,
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {},
                      Object {
                        "transform": Array [
                          Object {
                            "translateY": -37.5,
                          },
                        ],
                      },
                    ]
                  }
                >
                  <View
                    color="default"
                    isId={true}
                    style={
                      Array [
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "#FFCB05",
                          "borderRadius": 21,
                          "justifyContent": "center",
                          "paddingBottom": 2,
                          "paddingLeft": 21,
                          "paddingRight": 21,
                          "paddingTop": 2,
                        },
                      ]
                    }
                  >
                    <Text
                      color="default"
                      isId={true}
                      style={
                        Array [
                          Object {
                            "color": "#21386E",
                            "textTransform": "capitalize",
                          },
                        ]
                      }
                    >
                      # 001
                    </Text>
                  </View>
                </View>
              </View>
              <View
                color="blue"
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#A8D5FF",
                      "borderRadius": 117,
                      "height": 233,
                      "justifyContent": "center",
                      "opacity": 1,
                      "width": 233,
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {},
                      Object {
                        "transform": Array [
                          Object {
                            "scale": 0.4,
                          },
                        ],
                      },
                    ]
                  }
                >
                  <Image
                    source={
                      Object {
                        "uri": "https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/1.png",
                      }
                    }
                    style={
                      Array [
                        Object {
                          "height": 199,
                          "width": 199,
                        },
                      ]
                    }
                  />
                </View>
              </View>
              <View
                style={
                  Array [
                    Object {},
                    Object {
                      "transform": Array [
                        Object {
                          "scale": 0.4,
                        },
                      ],
                    },
                  ]
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontSize": 38,
                        "fontWeight": "bold",
                        "opacity": 1,
                        "textTransform": "capitalize",
                      },
                    ]
                  }
                >
                  teste2
                </Text>
              </View>
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "space-evenly",
                      "marginTop": 15,
                      "width": "100%",
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {},
                      Object {
                        "transform": Array [
                          Object {
                            "scale": 0.4,
                          },
                        ],
                      },
                    ]
                  }
                >
                  <View
                    color="blue"
                    isId={false}
                    style={
                      Array [
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "#5AA2E5",
                          "borderRadius": 21,
                          "justifyContent": "center",
                          "paddingBottom": 2,
                          "paddingLeft": 21,
                          "paddingRight": 21,
                          "paddingTop": 2,
                        },
                      ]
                    }
                  >
                    <Text
                      color="blue"
                      isId={false}
                      style={
                        Array [
                          Object {
                            "color": "#FFF",
                            "textTransform": "capitalize",
                          },
                        ]
                      }
                    >
                      testeC
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    Array [
                      Object {},
                      Object {
                        "transform": Array [
                          Object {
                            "scale": 0.4,
                          },
                        ],
                      },
                    ]
                  }
                >
                  <View
                    color="blue"
                    isId={false}
                    style={
                      Array [
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "#5AA2E5",
                          "borderRadius": 21,
                          "justifyContent": "center",
                          "paddingBottom": 2,
                          "paddingLeft": 21,
                          "paddingRight": 21,
                          "paddingTop": 2,
                        },
                      ]
                    }
                  >
                    <Text
                      color="blue"
                      isId={false}
                      style={
                        Array [
                          Object {
                            "color": "#FFF",
                            "textTransform": "capitalize",
                          },
                        ]
                      }
                    >
                      testeD
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RCTSafeAreaView>
`;

exports[`Home Should be render Search Loader 1`] = `
<RCTSafeAreaView
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
        "marginLeft": 32,
        "marginRight": 32,
        "position": "relative",
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#21386E",
          "fontSize": 42,
          "fontWeight": "bold",
          "marginBottom": 42,
          "marginTop": 42,
        },
      ]
    }
  >
    More than 1249 Pokemons for you choose your favorite
  </Text>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderColor": "#3663AD",
          "borderRadius": 42,
          "borderStyle": "solid",
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 85,
          "justifyContent": "space-between",
          "marginBottom": 42,
          "paddingBottom": 25,
          "paddingLeft": 30,
          "paddingRight": 30,
          "paddingTop": 25,
          "width": "100%",
        },
      ]
    }
  >
    <Image
      source={1}
      style={
        Array [
          Object {
            "height": 53,
            "width": 53,
          },
        ]
      }
      testID="searchIcon"
    />
    <TextInput
      accessibilityHint="Type here to search pokemons"
      onChange={[Function]}
      onPointerEnter={[Function]}
      style={
        Array [
          Object {
            "color": "#21386E",
            "fontSize": 30,
            "opacity": 0.5,
            "textAlign": "left",
            "width": 471,
          },
        ]
      }
      value=""
    />
    <View
      accessibilityHint="Press to search"
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <Image
        source={1}
        style={
          Array [
            Object {
              "height": 53,
              "width": 53,
            },
          ]
        }
      />
    </View>
  </View>
  <RCTScrollView
    data={Array []}
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onEndReached={[Function]}
    onEndReachedThreshold={0.1}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    viewabilityConfigCallbackPairs={Array []}
  >
    <View />
  </RCTScrollView>
  <View
    accessibilityHint="Await for pokemon initial loader"
    style={
      Array [
        Object {
          "backgroundColor": "rgba(255, 255, 255, 0.59)",
          "height": "100%",
          "position": "absolute",
          "top": 0,
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "aspectRatio": 1,
          },
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          undefined,
        ]
      }
    >
      <View
        cacheComposition={true}
        collapsable={false}
        colorFilters={Array []}
        enableMergePathsAndroidForKitKatAndAbove={false}
        forwardedRef={[Function]}
        loop={true}
        onAnimationFinish={[Function]}
        progress={0}
        resizeMode="contain"
        sourceJson="{\\"v\\":\\"5.6.6\\",\\"ip\\":0,\\"op\\":80,\\"fr\\":60,\\"w\\":512,\\"h\\":512,\\"layers\\":[{\\"ind\\":3469,\\"nm\\":\\"surface36257\\",\\"ao\\":0,\\"ip\\":0,\\"op\\":80,\\"st\\":0,\\"ty\\":4,\\"ks\\":{\\"o\\":{\\"a\\":0,\\"k\\":100,\\"ix\\":11},\\"r\\":{\\"a\\":1,\\"k\\":[{\\"i\\":{\\"x\\":[0.83],\\"y\\":[1]},\\"o\\":{\\"x\\":[0.17],\\"y\\":[0]},\\"t\\":0,\\"s\\":[0]},{\\"i\\":{\\"x\\":[0.53],\\"y\\":[1]},\\"o\\":{\\"x\\":[0.6],\\"y\\":[0]},\\"t\\":11,\\"s\\":[-10]},{\\"i\\":{\\"x\\":[0.83],\\"y\\":[1]},\\"o\\":{\\"x\\":[0.17],\\"y\\":[0]},\\"t\\":65,\\"s\\":[365]},{\\"i\\":{\\"x\\":[0.83],\\"y\\":[1]},\\"o\\":{\\"x\\":[0.17],\\"y\\":[0]},\\"t\\":77,\\"s\\":[358]},{\\"t\\":85,\\"s\\":[360]}],\\"ix\\":10},\\"p\\":{\\"a\\":0,\\"k\\":[256,256],\\"ix\\":2},\\"a\\":{\\"a\\":0,\\"k\\":[192,192],\\"ix\\":1},\\"s\\":{\\"a\\":0,\\"k\\":[133.34,133.34],\\"ix\\":6}},\\"shapes\\":[{\\"ty\\":\\"gr\\",\\"hd\\":false,\\"nm\\":\\"surface36257\\",\\"it\\":[{\\"ty\\":\\"gr\\",\\"hd\\":false,\\"it\\":[{\\"ty\\":\\"gr\\",\\"hd\\":false,\\"it\\":[{\\"ty\\":\\"sh\\",\\"ks\\":{\\"k\\":{\\"i\\":[[0,0],[-17.62,-17.62],[-22.86,-9.67],[-25.92,0],[-2.65,0.11],[21.23,8.98],[17.63,17.64],[9.68,22.85],[0,25.92],[-10.01,23.67],[-17.63,17.62],[-22.86,9.67],[-23.09,0.94],[2.68,0],[23.67,-10.02],[17.63,-17.63],[9.67,-22.86],[0,-25.92],[-10.01,-23.67]],\\"o\\":[[9.67,22.85],[17.63,17.64],[23.67,10.01],[2.68,0],[-23.09,-0.94],[-22.86,-9.67],[-17.63,-17.62],[-10.02,-23.67],[0,-25.91],[9.68,-22.86],[17.63,-17.63],[21.23,-8.98],[-2.65,-0.11],[-25.91,0],[-22.86,9.67],[-17.62,17.62],[-10.02,23.67],[0,25.92],[0,0]],\\"v\\":[[15.09,266.73],[56.23,327.75],[117.26,368.9],[192,383.99],[199.99,383.83],[133.25,368.9],[72.23,327.75],[31.09,266.73],[16,192],[31.09,117.26],[72.23,56.24],[133.26,15.09],[200,0.16],[192,0],[117.27,15.09],[56.23,56.24],[15.1,117.26],[0,192],[15.09,266.73]],\\"c\\":true}}},{\\"ty\\":\\"fl\\",\\"o\\":{\\"k\\":10},\\"c\\":{\\"k\\":[0,0,0,1]}},{\\"ty\\":\\"tr\\",\\"o\\":{\\"k\\":100},\\"r\\":{\\"k\\":0},\\"p\\":{\\"k\\":[0,0]},\\"a\\":{\\"k\\":[0,0]},\\"s\\":{\\"k\\":[100,100]},\\"sk\\":{\\"k\\":0},\\"sa\\":{\\"k\\":0},\\"hd\\":false}]},{\\"ty\\":\\"tr\\",\\"o\\":{\\"k\\":100},\\"r\\":{\\"k\\":0},\\"p\\":{\\"k\\":[0,0]},\\"a\\":{\\"k\\":[0,0]},\\"s\\":{\\"k\\":[100,100]},\\"sk\\":{\\"k\\":0},\\"sa\\":{\\"k\\":0},\\"hd\\":false}]},{\\"ty\\":\\"gr\\",\\"hd\\":false,\\"it\\":[{\\"ty\\":\\"gr\\",\\"hd\\":false,\\"it\\":[{\\"ty\\":\\"sh\\",\\"ks\\":{\\"k\\":{\\"i\\":[[0,0],[17.62,17.63],[22.85,9.67],[25.92,0],[2.65,-0.11],[-21.23,-8.98],[-17.62,-17.62],[-9.67,-22.86],[0,-25.91],[10.02,-23.67],[17.62,-17.62],[22.87,-9.67],[23.09,-0.94],[-2.68,0],[-23.67,10.01],[-17.64,17.64],[-9.67,22.85],[0,25.92],[10.01,23.67]],\\"o\\":[[-9.67,-22.86],[-17.64,-17.62],[-23.67,-10.01],[-2.68,0],[23.09,0.94],[22.88,9.67],[17.62,17.63],[10.02,23.67],[0,25.92],[-9.67,22.85],[-17.62,17.64],[-21.23,8.98],[2.65,0.11],[25.92,0],[22.85,-9.67],[17.62,-17.62],[10.01,-23.67],[0,-25.92],[0,0]],\\"v\\":[[368.89,117.26],[327.76,56.23],[266.73,15.1],[191.99,0],[184,0.17],[250.73,15.1],[311.75,56.23],[352.9,117.26],[367.98,192],[352.9,266.73],[311.75,327.75],[250.73,368.9],[184,383.83],[191.99,383.99],[266.73,368.9],[327.76,327.75],[368.89,266.73],[383.99,192],[368.89,117.26]],\\"c\\":true}}},{\\"ty\\":\\"fl\\",\\"o\\":{\\"k\\":20},\\"c\\":{\\"k\\":[1,1,1,1]}},{\\"ty\\":\\"tr\\",\\"o\\":{\\"k\\":100},\\"r\\":{\\"k\\":0},\\"p\\":{\\"k\\":[0,0]},\\"a\\":{\\"k\\":[0,0]},\\"s\\":{\\"k\\":[100,100]},\\"sk\\":{\\"k\\":0},\\"sa\\":{\\"k\\":0},\\"hd\\":false}]},{\\"ty\\":\\"tr\\",\\"o\\":{\\"k\\":100},\\"r\\":{\\"k\\":0},\\"p\\":{\\"k\\":[0,0]},\\"a\\":{\\"k\\":[0,0]},\\"s\\":{\\"k\\":[100,100]},\\"sk\\":{\\"k\\":0},\\"sa\\":{\\"k\\":0},\\"hd\\":false}]},{\\"ty\\":\\"gr\\",\\"hd\\":false,\\"it\\":[{\\"ty\\":\\"sh\\",\\"ks\\":{\\"k\\":{\\"i\\":[[0,0],[0,-39.7],[-39.7,0],[0,39.7],[39.7,0]],\\"o\\":[[-39.7,0],[0,39.7],[39.7,0],[0,-39.7],[0,0]],\\"v\\":[[191.99,128],[120,199.99],[191.99,271.98],[263.99,199.99],[191.99,128]],\\"c\\":true}}},{\\"ty\\":\\"sh\\",\\"ks\\":{\\"k\\":{\\"i\\":[[0,0],[0,17.64],[-17.64,0],[0,-17.64],[17.65,0]],\\"o\\":[[-17.64,0],[0,-17.64],[17.65,0],[0,17.64],[0,0]],\\"v\\":[[191.99,232],[160,199.99],[191.99,168],[223.98,199.99],[191.99,232]],\\"c\\":true}}},{\\"ty\\":\\"fl\\",\\"o\\":{\\"k\\":100},\\"c\\":{\\"k\\":[0.26,0.29,0.33,1]}},{\\"ty\\":\\"tr\\",\\"o\\":{\\"k\\":100},\\"r\\":{\\"k\\":0},\\"p\\":{\\"k\\":[0,0]},\\"a\\":{\\"k\\":[0,0]},\\"s\\":{\\"k\\":[100,100]},\\"sk\\":{\\"k\\":0},\\"sa\\":{\\"k\\":0},\\"hd\\":false}]},{\\"ty\\":\\"gr\\",\\"hd\\":false,\\"it\\":[{\\"ty\\":\\"sh\\",\\"ks\\":{\\"k\\":{\\"i\\":[[0,0],[22.09,0],[0,22.09],[-22.09,0],[0,-22.09]],\\"o\\":[[0,22.09],[-22.09,0],[0,-22.09],[22.09,0],[0,0]],\\"v\\":[[232,199.99],[191.99,239.99],[151.99,199.99],[191.99,160],[232,199.99]],\\"c\\":true}}},{\\"ty\\":\\"fl\\",\\"o\\":{\\"k\\":100},\\"c\\":{\\"k\\":[0.9,0.91,0.93,1]}},{\\"ty\\":\\"tr\\",\\"o\\":{\\"k\\":100},\\"r\\":{\\"k\\":0},\\"p\\":{\\"k\\":[0,0]},\\"a\\":{\\"k\\":[0,0]},\\"s\\":{\\"k\\":[100,100]},\\"sk\\":{\\"k\\":0},\\"sa\\":{\\"k\\":0},\\"hd\\":false}]},{\\"ty\\":\\"gr\\",\\"hd\\":false,\\"it\\":[{\\"ty\\":\\"gr\\",\\"hd\\":false,\\"it\\":[{\\"ty\\":\\"sh\\",\\"ks\\":{\\"k\\":{\\"i\\":[[0,0],[0,6.35],[0.76,7],[17.26,-1.9],[64.92,0],[32.76,3.61],[9.54,1.47],[0,-7.14],[-0.61,-6.26],[-91.31,0],[-31.15,4.69]],\\"o\\":[[0.61,-6.26],[0,-7.14],[-9.54,1.47],[-32.77,3.61],[-64.91,0],[-17.27,-1.9],[-0.77,7],[0,6.35],[31.15,4.69],[91.31,0],[0,0]],\\"v\\":[[383.07,210.91],[383.99,192],[382.84,170.78],[342.34,176.07],[191.99,184],[41.65,176.07],[1.15,170.78],[0,192],[0.91,210.91],[191.99,223.99],[383.07,210.91]],\\"c\\":true}}},{\\"ty\\":\\"fl\\",\\"o\\":{\\"k\\":100},\\"c\\":{\\"k\\":[0.26,0.29,0.33,1]}},{\\"ty\\":\\"tr\\",\\"o\\":{\\"k\\":100},\\"r\\":{\\"k\\":0},\\"p\\":{\\"k\\":[0,0]},\\"a\\":{\\"k\\":[0,0]},\\"s\\":{\\"k\\":[100,100]},\\"sk\\":{\\"k\\":0},\\"sa\\":{\\"k\\":0},\\"hd\\":false}]},{\\"ty\\":\\"tr\\",\\"o\\":{\\"k\\":100},\\"r\\":{\\"k\\":0},\\"p\\":{\\"k\\":[0,0]},\\"a\\":{\\"k\\":[0,0]},\\"s\\":{\\"k\\":[100,100]},\\"sk\\":{\\"k\\":0},\\"sa\\":{\\"k\\":0},\\"hd\\":false}]},{\\"ty\\":\\"gr\\",\\"hd\\":false,\\"it\\":[{\\"ty\\":\\"gr\\",\\"hd\\":false,\\"it\\":[{\\"ty\\":\\"sh\\",\\"ks\\":{\\"k\\":{\\"i\\":[[0,0],[-9.32,-22.03],[-17.62,-17.62],[-22.86,-9.67],[-25.92,0],[-23.67,10.01],[-17.64,17.64],[-9.67,22.85],[-0.66,24.01]],\\"o\\":[[0.66,24.01],[9.67,22.85],[17.63,17.64],[23.67,10.01],[25.92,0],[22.85,-9.67],[17.62,-17.62],[9.33,-22.03],[0,0]],\\"v\\":[[0.08,197.39],[15.09,266.73],[56.23,327.75],[117.26,368.9],[192,383.99],[266.73,368.9],[327.77,327.75],[368.9,266.73],[383.92,197.39]],\\"c\\":true}}},{\\"ty\\":\\"fl\\",\\"o\\":{\\"k\\":100},\\"c\\":{\\"k\\":[0.9,0.91,0.93,1]}},{\\"ty\\":\\"tr\\",\\"o\\":{\\"k\\":100},\\"r\\":{\\"k\\":0},\\"p\\":{\\"k\\":[0,0]},\\"a\\":{\\"k\\":[0,0]},\\"s\\":{\\"k\\":[100,100]},\\"sk\\":{\\"k\\":0},\\"sa\\":{\\"k\\":0},\\"hd\\":false}]},{\\"ty\\":\\"tr\\",\\"o\\":{\\"k\\":100},\\"r\\":{\\"k\\":0},\\"p\\":{\\"k\\":[0,0]},\\"a\\":{\\"k\\":[0,0]},\\"s\\":{\\"k\\":[100,100]},\\"sk\\":{\\"k\\":0},\\"sa\\":{\\"k\\":0},\\"hd\\":false}]},{\\"ty\\":\\"gr\\",\\"hd\\":false,\\"it\\":[{\\"ty\\":\\"gr\\",\\"hd\\":false,\\"it\\":[{\\"ty\\":\\"sh\\",\\"ks\\":{\\"k\\":{\\"i\\":[[0,0],[17.62,17.63],[22.85,9.67],[25.92,0],[23.67,-10.02],[17.63,-17.62],[9.67,-22.86],[0,-25.92],[-10.02,-23.67],[-17.62,-17.62],[-22.86,-9.67],[-25.92,0],[-23.67,10.01],[-17.64,17.64],[-9.67,22.85],[0,25.92],[10.01,23.67]],\\"o\\":[[-9.67,-22.86],[-17.64,-17.62],[-23.67,-10.01],[-25.91,0],[-22.86,9.67],[-17.62,17.63],[-10.01,23.67],[0,25.92],[9.67,22.85],[17.63,17.64],[23.67,10.01],[25.92,0],[22.85,-9.67],[17.62,-17.62],[10.01,-23.67],[0,-25.92],[0,0]],\\"v\\":[[368.89,117.26],[327.76,56.23],[266.73,15.1],[191.99,0],[117.26,15.1],[56.23,56.23],[15.09,117.26],[0,192],[15.09,266.73],[56.23,327.75],[117.26,368.9],[192,383.99],[266.73,368.9],[327.77,327.75],[368.9,266.73],[383.99,192],[368.89,117.26]],\\"c\\":true}}},{\\"ty\\":\\"fl\\",\\"o\\":{\\"k\\":100},\\"c\\":{\\"k\\":[0.93,0.33,0.39,1]}},{\\"ty\\":\\"tr\\",\\"o\\":{\\"k\\":100},\\"r\\":{\\"k\\":0},\\"p\\":{\\"k\\":[0,0]},\\"a\\":{\\"k\\":[0,0]},\\"s\\":{\\"k\\":[100,100]},\\"sk\\":{\\"k\\":0},\\"sa\\":{\\"k\\":0},\\"hd\\":false}]},{\\"ty\\":\\"tr\\",\\"o\\":{\\"k\\":100},\\"r\\":{\\"k\\":0},\\"p\\":{\\"k\\":[0,0]},\\"a\\":{\\"k\\":[0,0]},\\"s\\":{\\"k\\":[100,100]},\\"sk\\":{\\"k\\":0},\\"sa\\":{\\"k\\":0},\\"hd\\":false}]},{\\"ty\\":\\"tr\\",\\"o\\":{\\"k\\":100},\\"r\\":{\\"k\\":0},\\"p\\":{\\"k\\":[0,0]},\\"a\\":{\\"k\\":[0,0]},\\"s\\":{\\"k\\":[100,100]},\\"sk\\":{\\"k\\":0},\\"sa\\":{\\"k\\":0},\\"hd\\":false}]}]}],\\"meta\\":{\\"g\\":\\"LF SVG to Lottie\\"}}"
        speed={1}
        style={
          Object {
            "aspectRatio": 1,
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        textFiltersAndroid={Array []}
        textFiltersIOS={Array []}
        useNativeLooping={false}
      />
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`Home Should be render Shimmer Card 1`] = `
<RCTSafeAreaView
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
        "marginLeft": 32,
        "marginRight": 32,
        "position": "relative",
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#21386E",
          "fontSize": 42,
          "fontWeight": "bold",
          "marginBottom": 42,
          "marginTop": 42,
        },
      ]
    }
  >
    More than 1249 Pokemons for you choose your favorite
  </Text>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderColor": "#3663AD",
          "borderRadius": 42,
          "borderStyle": "solid",
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 85,
          "justifyContent": "space-between",
          "marginBottom": 42,
          "paddingBottom": 25,
          "paddingLeft": 30,
          "paddingRight": 30,
          "paddingTop": 25,
          "width": "100%",
        },
      ]
    }
  >
    <Image
      source={1}
      style={
        Array [
          Object {
            "height": 53,
            "width": 53,
          },
        ]
      }
      testID="searchIcon"
    />
    <TextInput
      accessibilityHint="Type here to search pokemons"
      onChange={[Function]}
      onPointerEnter={[Function]}
      style={
        Array [
          Object {
            "color": "#21386E",
            "fontSize": 30,
            "opacity": 0.5,
            "textAlign": "left",
            "width": 471,
          },
        ]
      }
      value=""
    />
    <View
      accessibilityHint="Press to search"
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <Image
        source={1}
        style={
          Array [
            Object {
              "height": 53,
              "width": 53,
            },
          ]
        }
      />
    </View>
  </View>
  <RCTScrollView
    data={
      Array [
        Object {
          "id": "1",
        },
        Object {
          "id": "2",
        },
        Object {
          "id": "3",
        },
        Object {
          "id": "4",
        },
      ]
    }
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    viewabilityConfigCallbackPairs={Array []}
  >
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            Array [
              Object {
                "flexDirection": "row",
              },
              Object {
                "justifyContent": "space-evenly",
                "width": 720,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#c5c5c5",
                  "borderRadius": 32,
                  "height": 405,
                  "justifyContent": "center",
                  "marginBottom": 25,
                  "marginLeft": 10,
                  "marginRight": 10,
                  "marginTop": 25,
                  "position": "relative",
                  "width": 300,
                },
              ]
            }
            testID="Shimmer"
          >
            <Image
              source={1}
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "borderRadius": 32,
                    "height": 233,
                    "justifyContent": "center",
                    "width": 233,
                  },
                ]
              }
            />
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#c5c5c5",
                  "borderRadius": 32,
                  "height": 405,
                  "justifyContent": "center",
                  "marginBottom": 25,
                  "marginLeft": 10,
                  "marginRight": 10,
                  "marginTop": 25,
                  "position": "relative",
                  "width": 300,
                },
              ]
            }
            testID="Shimmer"
          >
            <Image
              source={1}
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "borderRadius": 32,
                    "height": 233,
                    "justifyContent": "center",
                    "width": 233,
                  },
                ]
              }
            />
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            Array [
              Object {
                "flexDirection": "row",
              },
              Object {
                "justifyContent": "space-evenly",
                "width": 720,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#c5c5c5",
                  "borderRadius": 32,
                  "height": 405,
                  "justifyContent": "center",
                  "marginBottom": 25,
                  "marginLeft": 10,
                  "marginRight": 10,
                  "marginTop": 25,
                  "position": "relative",
                  "width": 300,
                },
              ]
            }
            testID="Shimmer"
          >
            <Image
              source={1}
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "borderRadius": 32,
                    "height": 233,
                    "justifyContent": "center",
                    "width": 233,
                  },
                ]
              }
            />
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#c5c5c5",
                  "borderRadius": 32,
                  "height": 405,
                  "justifyContent": "center",
                  "marginBottom": 25,
                  "marginLeft": 10,
                  "marginRight": 10,
                  "marginTop": 25,
                  "position": "relative",
                  "width": 300,
                },
              ]
            }
            testID="Shimmer"
          >
            <Image
              source={1}
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "borderRadius": 32,
                    "height": 233,
                    "justifyContent": "center",
                    "width": 233,
                  },
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RCTSafeAreaView>
`;
